--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,14 @@ dependencies {
     implementation 'com.roughike:bottom-bar:2.3.1'
     implementation 'gun0912.ted:tedbottompicker:1.0.12'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    implementation 'com.mxn.soul:flowingdrawer-core:2.0.0'
+    implementation 'com.nineoldandroids:library:2.4.0'
+
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.1.7'
 }
+
+
+
+
 apply plugin: 'com.google.gms.google-services'
